<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.victim.interviewapp.tips">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="8dp"
        android:showDividers="middle"
        android:weightSum="1"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="6dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/textViewname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:text="@string/your_name" />

        <EditText
            android:id="@+id/editTextname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_your_name"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textViewcompany"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:text="@string/company_name1" />

        <EditText
            android:id="@+id/editTextcompany"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/editextcompany"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/position"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:text="@string/your_position" />

        <EditText
            android:id="@+id/editTextposition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/position12"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textViewtips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:text="@string/tips_for_interviewee" />

        <EditText
            android:id="@+id/editTexttips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/write_your_tips_here"
            android:inputType="textMultiLine"
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/buttonsubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
