<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    card_view:cardCornerRadius="5dp"
    card_view:cardElevation="5dp"
    android:paddingStart="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"

    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cname1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/company_name"

            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="normal" />

        <TextView
            android:id="@+id/cname"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/name"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/position1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="1"
            android:padding="10dp"
            android:text="@string/position1"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/position"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:padding="10dp"
            android:text="@string/position"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/type1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="1"
            android:padding="10dp"
            android:text="@string/type1"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/type"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:padding="10dp"
            android:text="@string/type"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/process1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="1"
            android:padding="10dp"
            android:text="@string/process1"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/process"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:lines="3"
            android:padding="10dp"
            android:text="@string/process"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/advice1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="1"
            android:padding="10dp"
            android:text="@string/advice1"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/advice"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:lines="3"
            android:padding="10dp"
            android:text="@string/advice"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/outcome1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="1"
            android:padding="10dp"
            android:text="@string/outcome1"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/outcome"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:padding="10dp"
            android:text="@string/outcome"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/question1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="1"
            android:padding="10dp"
            android:text="@string/questions1"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/question"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:lines="3"
            android:padding="10dp"
            android:text="@string/questions"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/skill1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="1"
            android:padding="10dp"
            android:text="@string/skills_tested"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/skill"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="3"
            android:padding="10dp"
            android:text="@string/skills"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
    </LinearLayout>
    </LinearLayout>




</android.support.v7.widget.CardView>
