<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.victim.interviewapp.model">

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <Button
            android:id="@+id/profile"
            android:layout_width="362dp"
            android:layout_height="wrap_content"
            android:text="@string/login_to_write_your_experience" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">


            <Button
                android:id="@+id/interviews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                android:text="@string/interview"

                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/tips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                android:text="@string/tips"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/mcq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.34"
                android:text="@string/mcq"
                tools:ignore="ButtonStyle" />

        </LinearLayout>


        <ListView
            android:id="@+id/lv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:background="@color/backc"
            android:dividerHeight="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>